# tcat

./: .dockerignore  .gitignore  Dockerfile  README.md  build-image.sh  pyproject.toml  run.sh  tcat.py
data/: bank.yaml  bills.yaml  food.yaml  fun.yaml  groceries.yaml  job.yaml  misc.yaml  travel.yaml  xfer.yaml
old/: Dockerfile  README.md  build.sh  pyproject.toml
old/data/: bank.yaml  bills.yaml  food.yaml  groceries.yaml  legal.yaml  school.yaml  travel.yaml
old/old2/: tcat.py
old/src/tcat/: __init__.py  categorizer.py  graphics.py  parser.py  transaction.py
old/tests/test_tcat/: test_categorizer.py  test_parser.py  test_transactions.py
src/tcat/: __init__.py  categorizer.py  credit.py  graphics.py  parser.py  prediction.py  transaction.py  transaction_base.py
tests/test_tcat/: __init__.py  test_graphics.py  test_parser.py  test_prediction.py  test_transactions.py
