[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core>=1.0.0"]

[tool.mypy]
files                  = "src/**/*.py"
ignore_errors          = true
ignore_missing_imports = true
pretty                 = true
python_version         = "3.9"
show_column_numbers    = true
show_error_codes       = true
show_error_context     = true

[[tool.mypy.overrides]]
ignore_errors = false
module        = "tcat"

[tool.poetry]
authors     = ["Harrison Totty <harrisongtotty@gmail.com>"]
description = "A python library for analyzing my personal finances."
name        = "tcat"
readme      = "README.md"
repository  = "https://github.com/HarrisonTotty/tcat"
version     = "0.1.0"
include     = ["src/tcat/*.yaml"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy            = "*"
pytest          = "*"
pytest-aio      = "*"
pytest-cov      = "*"
pytest-randomly = "*"

[tool.pytest.ini_options]
addopts          = "--cov=tcat"
python_files     = "*.py"
python_functions = "test_*"
testpaths        = "tests"
