[tool.poetry]
authors = ["Harrison Totty <harrisongtotty@gmail.com>"]
description = "A handy financial transaction library."
name = "tcat"
readme = "README.md"
repository = "https://github.com/HarrisonTotty/tcat"
version = "2.1.0"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
